--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vite": "npm:rolldown-vite@7.1.14"
   },
   "dependencies": {
+    "@shoelace-style/shoelace": "^2.20.1",
     "monaco-editor": "^0.54.0"
   }
 }
